--- a/www/login.html
+++ b/www/login.html
@@ -63,7 +63,7 @@
                   <div class="col col-100 text-center"><img class="worldimagelogin animated zoomOut" src="img/SpinningEarth.gif"></div>
                 </div>
                 <!-- <div style="m"><img src="img/starterimage.png"></div> -->
-                <p class="fybplast animated bounceInUp">www.mydomain.com</p>
+                <p class="fybplast animated bounceInUp" ng-click="call()">www.mydomain.com</p>
             </div>
           </form>
         </div>
