--- a/www/login.html
+++ b/www/login.html
@@ -54,7 +54,7 @@
   <body ng-app="besties">
     <ion-content class="myLogContent text-center" scroll="false">
         <div id="DivM1" class="DivM1" ng-hide="open1">
-          <form>
+          <form name="bestiesform">
             <div class="list DivM1list">
               <p class="fybp1 animated fadeInUp">
                     Find Your Besties 
@@ -69,14 +69,14 @@
         </div>
 
         <div id="DivM2" class="DivM2" ng-hide="open2">
-          <form name="login">
+          <form name="loginbesties">
           <p class="fybpcontact animated zoomInUp">
                 Join Us <br>
                 <h2 class="fybpcontacth2 animated slideInLeft">Your Contact</h2>
           </p>
           <label class="item item-input item-floating-label text-center CNtdlabel animated bounceInDown">
             <center><span class="input-label CNtdspan">Contact Number</span></center>
-            <input type="text" ng-model="formdata.uphone" ng-minlength="10" ng-maxlength="10" id="txtPhone" ng-pattern="regex" class="thirddivinput" numbers-only placeholder="10 Digit Contact Number">
+            <input type="text" ng-model="formdata.uphone" name="txtPhone" ng-minlength="10" ng-maxlength="10" id="txtPhone" ng-pattern="regex" class="thirddivinput" numbers-only placeholder="10 Digit Contact Number">
           </label>
           <button id="btngo2" ng-click="call2()" class="button btngo2 animated flipInX" ng-hide="btngo2">
               <!-- <img src="img/go1.png" width="70" height="70"> -->
