--- a/www/login.html
+++ b/www/login.html
@@ -91,7 +91,7 @@
           </p>
           <label class="item item-input item-floating-label text-center la2 tdlabel">
                 <center><span class="input-label tdspan">6 digit OTP</span></center>
-                <input type="text" ng-keyup="submit(otp)" id="txtOTP" ng-model="formdata.otp" ng-minlength="6" ng-maxlength="6" class="thirddivinput" id="otptxtdivinput" validate-otp placeholder="6 digit OTP">
+                <input type="text" ng-keyup="submit(otp)" id="txtOTP" ng-model="gformdata.otp" ng-minlength="6" ng-maxlength="6" class="thirddivinput" id="otptxtdivinput" validate-otp placeholder="6 digit OTP">
           </label>
           <button id="btngo3" ng-click="call3()" class="button btngo3 animated flipInX" ng-hide="btngo3">
             <!-- <img src="img/go1.png" width="70" height="70"> -->
