--- a/www/index.html
+++ b/www/index.html
@@ -71,6 +71,7 @@
     <script src="js/service/trackusers.js"></script>
     <script src="js/service/makedb.js"></script>
     <script src="js/service/availability.js"></script>
+    <script src="js/service/deviceservices.js"></script>
 
     <!-- Other's files -->
     <link rel="stylesheet" href="css/ng-animation.css">
