--- a/www/login.html
+++ b/www/login.html
@@ -76,7 +76,7 @@
           </p>
           <label class="item item-input item-floating-label text-center CNtdlabel animated bounceInDown">
             <center><span class="input-label CNtdspan">Contact Number</span></center>
-            <input type="text" ng-model="formdata.uphone" name="txtPhone" ng-minlength="10" ng-maxlength="10" id="txtPhone" ng-pattern="regex" class="thirddivinput" numbers-only placeholder="10 Digit Contact Number">
+            <input type="text" ng-model="formdata.uphone" name="txtPhone" ng-minlength="10" ng-maxlength="10" id="txtPhone" ng-pattern="regex" class="thirddivinput" numbers-only placeholder="My Contact Number">
           </label>
           <button id="btngo2" ng-click="call2()" class="button btngo2 animated flipInX" ng-hide="btngo2">
               <!-- <img src="img/go1.png" width="70" height="70"> -->
