--- a/www/index.html
+++ b/www/index.html
@@ -63,6 +63,8 @@
     <script type="text/javascript" src="js/controller/viewbestiesController.js"></script>
     <script type="text/javascript" src="js/controller/viewinmapController.js"></script>
     <script type="text/javascript" src="js/controller/chatController.js"></script>
+    <script src="js/controller/contactsbyIdController.js"></script>
+
 
     <script src="js/service/loginService.js"></script>
     <script src="js/controller/loginController.js"></script>
