--- a/www/index.html
+++ b/www/index.html
@@ -6,7 +6,7 @@
   
   <title>FYB</title>
   
-  <link rel="icon" href="img/ionic.png">
+  <link rel="icon" href="img/bestieslogo.png">
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBStEJdHAiAZAOeZB8sG2cx5MdKqm284t8&callback=initMap"
  type="text/javascript"></script>
     <!-- <link href="css/stylelogin.css" rel="stylesheet"> -->
