--- a/www/login.html
+++ b/www/login.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>FYB</title>
   
-  <link rel="icon" href="img/ionic.png">
+  <link rel="icon" href="img/bestieslogo.png">
     <link href="css/stylelogin.css" rel="stylesheet">
 </head>
 
