--- a/www/index.html
+++ b/www/index.html
@@ -66,6 +66,7 @@
     <script type="text/javascript" src="js/controller/viewinmapController.js"></script>
     <script type="text/javascript" src="js/controller/chatController.js"></script>
     <script src="js/controller/contactsbyIdController.js"></script>
+    <script src="js/controller/searchController.js"></script>
 
 
 
