--- a/www/index.html
+++ b/www/index.html
@@ -83,6 +83,7 @@
     <script src="js/service/bestiesservice.js"></script>
     <script src="js/service/notifyservice.js"></script>
     <script src="js/service/countries.js"></script>
+    <script src="js/service/profileservice.js"></script>
     
 
     <!-- Other's files -->
@@ -95,7 +96,7 @@
   <body ng-app="besties">
       <ion-nav-view></ion-nav-view>
       
-      <script id="dsq-count-scr" src="http://jpbesties.disqus.com/count.js" async></script>
+      <script id="dsq-count-scr" src="https://jpbesties.disqus.com/count.js" async></script>
   </body>
 </html>
 
