--- a/www/login.html
+++ b/www/login.html
@@ -65,7 +65,7 @@
                   <div class="col col-100 text-center"><img class="worldimagelogin animated zoomOut" src="img/SpinningEarth.gif"></div>
                 </div>
                 <!-- <div style="m"><img src="img/starterimage.png"></div> -->
-                <p class="fybplast animated bounceInUp" ng-click="call()">www.mydomain.com</p>
+                <p class="fybplast myweb animated bounceInUp" ng-click="call()">www.mydomain.com</p>
             </div>
           </form>
         </div>
@@ -78,7 +78,7 @@
           </p>
 
           <label class="item item-input item-select animated bounceInDown labelselect">
-            <div class="input-label">
+            <div class="input-label selectlabelcountry">
               Country
             </div>
             <select class="selectcountry" id="country" name="country" ng-model="cntr.countrie" ng-change="changecountry($index)">
@@ -93,7 +93,7 @@
             <div class="col">
             <div ng-hide="countryshown">
             <img src="{{contryflag}}" width="30" height="20">
-            <p>{{countrycode}}</p>
+            <p style="color: #fff;">{{countrycode}}</p>
             </div>
             </div>
             <!-- <div class="col">
