--- a/www/index.html
+++ b/www/index.html
@@ -39,6 +39,25 @@
 
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
+
+
+
+    <!-- Firebase  -->
+    <script src="https://www.gstatic.com/firebasejs/3.6.6/firebase.js"></script>
+    <script>
+      // Initialize Firebasehttps://besties12032017.firebaseio.com/
+      var config = {
+        apiKey: "AIzaSyCBYH_5dFmwaz5iK4YSIk8yuMpIwGKnS3Q",
+        authDomain: "besties12032017.firebaseapp.com",
+        databaseURL: "https://besties12032017.firebaseio.com",
+        storageBucket: "besties12032017.appspot.com",
+        messagingSenderId: "556384031635"
+      };
+      firebase.initializeApp(config);
+      
+    </script>
+    <!-- AngularFire -->
+    <script src="https://cdn.firebase.com/libs/angularfire/2.2.0/angularfire.min.js"></script>
     <!-- <script src="lib/ionic/js/ionicnightly.bundle.js"></script> -->
     <!-- cordova script (this will be a 404 during development) -->
     <script type="text/javascript" src="lib/angular-animate/angular-animate.min.js"></script>
