--- a/www/index.html
+++ b/www/index.html
@@ -115,7 +115,7 @@
   <body ng-app="besties">
       <ion-nav-view></ion-nav-view>
       
-      <script id="dsq-count-scr" src="https://jpbesties.disqus.com/count.js" async></script>
+      <!-- <script id="dsq-count-scr" src="https://jpbesties.disqus.com/count.js" async></script> -->
   </body>
 </html>
 
