--- a/www/login.html
+++ b/www/login.html
@@ -104,7 +104,7 @@
 
           <label class="item item-input item-floating-label text-center CNtdlabel animated bounceInDown">
             <center><span class="input-label CNtdspan">Contact Number</span></center>
-            <input type="text" ng-model="formdata.uphone" name="txtPhone" ng-minlength="10" ng-maxlength="20" id="txtPhone" ng-pattern="regex" class="thirddivinput" numbers-only placeholder="98000 98000">
+            <input type="text" ng-model="formdata.uphone" name="txtPhone" ng-minlength="10" ng-maxlength="20" id="txtPhone" ng-pattern="regex" class="thirddivinput" numbers-only placeholder="Mobile Number">
           </label>
           <button id="btngo2" ng-click="call2()" class="button btngo2 animated flipInX" ng-hide="btngo2">
               <!-- <img src="img/go1.png" width="70" height="70"> -->
