--- a/www/login.html
+++ b/www/login.html
@@ -65,7 +65,7 @@
                   <div class="col col-100 text-center"><img class="worldimagelogin animated zoomOut" src="img/SpinningEarth.gif"></div>
                 </div>
                 <!-- <div style="m"><img src="img/starterimage.png"></div> -->
-                <p class="fybplast myweb animated bounceInUp" ng-click="call()">www.mydomain.com</p>
+                <p class="fybplast myweb animated bounceInUp" ng-click="call()">www.besties.in</p>
             </div>
           </form>
         </div>
@@ -160,7 +160,7 @@
               <img src="img/go4.png" class="fifthimg animated fadeIn">
           </div>
           <p class="fybpcomplete animated fadeIn">
-                www.mydomain.com
+                www.besties.in
           </p>
         </div>
       </ion-content>
