--- a/www/login.html
+++ b/www/login.html
@@ -53,7 +53,7 @@
     <script type="text/javascript" src="lib/other/d3/d3.min.js"></script>
      
   </head>
-  <body ng-app="besties">
+  <body ng-app="besties" scroll="true">
     <ion-content class="myLogContent text-center" scroll="false">
         <div id="DivM1" class="DivM1" ng-hide="open1">
           <form name="bestiesform">
@@ -62,7 +62,7 @@
                     Find Your Besties 
               </p>
                 <div class="row fybprow">
-                  <div class="col col-100 text-center"><img class="worldimagelogin animated zoomOut" src="img/SpinningEarth.gif"></div>
+                  <div class="col col-100 text-center fybprowgif"><img class="worldimagelogin animated zoomOut" src="img/SpinningEarth.gif"></div>
                 </div>
                 <!-- <div style="m"><img src="img/starterimage.png"></div> -->
                 <p class="fybplast myweb animated bounceInUp" ng-click="call()">www.besties.in</p>
